tests/errors/array_07.f90
program array_07
    integer :: a(:)
    a(:) = 1
end program
